# AdventOfCode2023

./: README.md  pyproject.toml
instructions/: cube_conundrum.md  trebuchet.md
solutions/: cube_conundrum.py  trebuchet.py
tests/: test_cube_conundrum.py  test_trebuchet.py
