[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = "Code solutions for 2023's Advent of Code"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
pylint = "^3.0.2"

[tool.pytest.ini_options]
pythonpath = "."

[tool.pylint."MESSAGES CONTROL"]
max-line-length=120
fail-under=10

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
